2024-07-15 Jan Kotanski <jankotan@gmail.com>
	* fix ScanFileInScanNameDir variable name to ScanNames (#138)
	* tagged as 3.27.1

2024-07-11 Jan Kotanski <jankotan@gmail.com>
	* add support for ScanFileInScanNameDir variable (#135)
	* tagged as 3.27.0

2024-07-03 Jan Kotanski <jankotan@gmail.com>
	* fix for summer time parsing (#132)
	* tagged as 3.26.1

2024-06-19 Jan Kotanski <jankotan@gmail.com>
	* replace NeXusSkipAcquisitionModes by NeXusWriterModes variable (#127)
	* tagged as 3.26.0

2024-06-07 Jan Kotanski <jankotan@gmail.com>
	* set NeXusMeshScanID variable (#124)
	* tagged as 3.25.0

2024-06-06 Jan Kotanski <jankotan@gmail.com>
	* set TangoDataWriter properties from NeXusWriterProperties variable (#121)
	* tagged as 3.24.0

2024-06-04 Jan Kotanski <jankotan@gmail.com>
	* skip acquisition for the modes listed in NeXusSkipAcquisitionModes variable (#117)
	* tagged as 3.23.0

2024-06-03 Jan Kotanski <jankotan@gmail.com>
	* improve support for ScanFile formating wih _%05d and _{ScanID:05d} (#114)
	* tagged as 3.22.0

2024-05-23 Jan Kotanski <jankotan@gmail.com>
	* replace deprecated tz.localize() with datetime.replace() (#111)
	* tagged as 3.21.1

2024-05-22 Jan Kotanski <jankotan@gmail.com>
	* improve support for creating measurement files in appendentry mode (#108)
	* change entryname in the appendentry mode to '%s_%05i' (#108)
	* tagged as 3.21.0

2024-05-22 Jan Kotanski <jankotan@gmail.com>
	* add support for creating measurement files (#105)
	* tagged as 3.20.0

2024-05-13 Jan Kotanski <jankotan@gmail.com>
	* send count_time beamtime_id and npoints to writer (#103)
	* tagged as 3.19.0

2023-12-15 Jan Kotanski <jankotan@gmail.com>
	* fix convention for entry names in multi-scan NeXus files (#96)
	* tagged as 3.18.1

2023-12-15 Jan Kotanski <jankotan@gmail.com>
	* add support for fetching metadata from multi-scan NeXus files (#90)
	* add support for SciCatAutoGrouping flag (#92)
	* tagged as 3.18.0

2023-12-13 Jan Kotanski <jankotan@gmail.com>