@@ -1,5 +1,6 @@
 2024-07-15 Jan Kotanski <jankotan@gmail.com>
 	* fix ScanFileInScanNameDir variable name to ScanNames (#138)
+	* fix support for ScanNames=False mode (#138)
 	* tagged as 3.27.1
 
 2024-07-11 Jan Kotanski <jankotan@gmail.com>
